--- a/_layout/tag.html
+++ b/_layout/tag.html
@@ -5,13 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="/css/frank.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <title>{{fill fd_tag}} | {{fill author}}</title>
+  <title>{{tag_name}} | {{fill author}}</title>
 </head>
 <body>
   {{insert header.html}}
   <div class="franklin-content">
     <div class="posts">
-      <h2>Tag ⇒ <span class="active-tag">{{fill fd_tag}}</span></h2>
+      <h2>Tag ⇒ <span class="active-tag">{{tag_name}}</span></h2>
       {{taglist}}
     </div>
     {{insert page_foot.html}}
